--- a/source/style.scss
+++ b/source/style.scss
@@ -39,3 +39,4 @@ Base includes
 @import 'sections/text';
 @import 'sections/image-text'; 
 @import 'sections/grid-with-text'; 
+@import 'sections/cursor'; 
