--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -4,7 +4,7 @@
   <div class="product-wrap">
     <div class="product-gallery">
 
-      <div class="[ js-product-imagery-slider ]">
+      <div class="product-slider [ js-product-imagery-slider ]">
         {% for media in product.media %}
         <img class="[ js-product-slider-item-image ]" src="{{ media.preview_image | img_url: '540x540', crop: 'center' }}" srcset="
             {{ media.preview_image | img_url: '540x540', crop: 'center' }} 540w,
@@ -14,31 +14,41 @@
         {% endfor %}
       </div>
 
+      <div class="product-gallery-previous [ js-cursor-previous ]"></div>
+      <div class="product-gallery-next [ js-cursor-next ]"></div>
+      <div class="product-gallery-lightbox [ js-product-lightbox ]">
+
+        <svg width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <path d="M19.679 4.005a.899.899 0 00-.8.913v2.05a.899.899 0 101.797 0v-2.05a.899.899 0 00-.997-.913zm-9.635 1.138a.899.899 0 00-.772 1.166l.59 1.994a.902.902 0 001.727-.52l-.59-1.994a.899.899 0 00-.955-.646zm19.27 0a.899.899 0 00-.759.646l-.59 1.994a.902.902 0 001.728.52l.59-1.994a.899.899 0 00-.97-1.166zM1.168 8.88a.899.899 0 00-.675 1.39l1.152 1.784a.9.9 0 101.517-.969L2.01 9.3a.899.899 0 00-.842-.421zm37.092 0a.899.899 0 00-.716.421l-1.152 1.784a.9.9 0 101.517.97l1.152-1.785a.899.899 0 00-.8-1.39zm-18.483 1.419c-8.233 0-15.487 3.715-19.607 9.368a.899.899 0 000 1.053c4.12 5.652 11.374 9.368 19.607 9.368 8.233 0 15.487-3.716 19.607-9.368a.899.899 0 000-1.053c-4.12-5.653-11.374-9.368-19.607-9.368zm0 2.26c4.23 0 7.64 3.41 7.64 7.641 0 4.232-3.41 7.64-7.64 7.64a7.626 7.626 0 01-7.64-7.64c0-4.231 3.41-7.64 7.64-7.64zm-5.87.254a9.44 9.44 0 00-3.568 7.387c0 2.996 1.41 5.655 3.595 7.388-4.92-1.202-9.096-3.873-11.867-7.388 2.765-3.512 6.93-6.18 11.84-7.387zm11.741 0c4.91 1.208 9.074 3.875 11.84 7.387-2.771 3.515-6.948 6.186-11.868 7.388 2.186-1.733 3.595-4.392 3.595-7.388a9.44 9.44 0 00-3.567-7.387z" fill="#000" fill-rule="nonzero" /></svg>
+
+        <svg class="eye-roll" width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <path d="M20.045 12a4.058 4.058 0 014.045 4.045 4.058 4.058 0 01-4.045 4.045A4.058 4.058 0 0116 16.045 4.058 4.058 0 0120.045 12zm0 1.798a2.233 2.233 0 00-2.247 2.247c0 1.252.995 2.247 2.247 2.247a2.233 2.233 0 002.247-2.247 2.233 2.233 0 00-2.247-2.247z" fill="#000" fill-rule="nonzero" /></svg>
+
+      </div>
+
+      <span class="product-gallery-progress">
+        <span class="product-gallery-progress__bar [ js-gallery-progress ]"></span>
+      </span>
+
+      <span class="product-gallery-progresscircle">
+        <svg width="100" height="100" viewBox="0 0 100 100">
+          <circle class="[ js-gallery-progress-circle ]" stroke-linecap="square" cx="50" cy="50" r="48" stroke="#000" stroke-width="2" fill="none" stroke-dasharray="315" stroke-dashoffset="100" stroke-mitterlimit="0" transform="rotate(-90 ) translate(-100 0)" />
+        </svg>
+      </span>
+
     </div>
 
     <div class="product-details">
 
-      <p class="h5 uppercase"><b>{{ product.collections.first.title }}</b></p>
+      <h6 class="product-details__category no-margin"><b>{{ product.collections.first.title | upcase }}</b></h6>
       <h1>
         <b>{{ product.title | escape }}</b>
       </h1>
       
-      <p class="h4"><b class="[ js-variation-price ]">{{ product.price | money }}</b></p>
+      <p class="h3"><b class="[ js-variation-price ]">{{ product.price | money }}</b></p>
       <p>&nbsp;</p>
-      
 
       {% form 'product', product, novalidate: 'novalidate', data-product-form: '' %}
-        <select style="display:nones !important;" name="id" id="ProductSelect-{{ section.id }}" class="[ js-variant ]">
-          {% for variant in product.variants %}
-            <option
-              value="{{ variant.id }}"
-            >
-              {{ variant.title | downcase }}
-              {%- if variant.available == false %} - Sold out{% endif %}
-            </option>
-          {% endfor %}
-        </select>
-
         <div class="product-actions">
           <div class="quantity">
             <div class="quantity-remove" onclick="changeQuantity(event,-1)">-</div>
@@ -53,6 +63,19 @@
             <a href="#" class="button [ js-add-to-cart ]">Add to Cart <span class="loader"></span></a>
           {% endunless %}
         </div>
+        
+        <select style="display:nones !important;" name="id" id="ProductSelect-{{ section.id }}" class="[ js-variant ]">
+          {% for variant in product.variants %}
+            <option
+              value="{{ variant.id }}"
+            >
+              {{ variant.title | downcase }}
+              {%- if variant.available == false %} - Sold out{% endif %}
+            </option>
+          {% endfor %}
+        </select>
+
+        
       {% endform %}
 
        
