--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -117,6 +117,19 @@
           </h3>
         {%- endif -%}
       {% endform %}
+
+      {% comment %}
+        Payment methods
+      {% endcomment %}
+      <a href="https://www.afterpay.com/en-NZ" target="_blank" rel="noopener" class="footer-column-payment">
+        <img src="{{ 'afterpay-logo.svg' | asset_url }}" loading="lazy" width="125" height="24">
+      </a>
+      
+      <a href="https://www.laybuy.com/nz/" target="_blank" rel="noopener" class="footer-column-payment">
+        <img src="{{ 'laybuy-logo.svg' | asset_url }}" loading="lazy" width="119" height="28">
+      </a>
+
+
     </div>
   </div>
 </footer>
