--- a/source/style.scss
+++ b/source/style.scss
@@ -40,3 +40,5 @@ Base includes
 @import 'sections/image-text'; 
 @import 'sections/grid-with-text'; 
 @import 'sections/cursor'; 
+@import 'sections/lightbox'; 
+@import 'sections/products'; 
