--- a/source/sections/header.scss
+++ b/source/sections/header.scss
@@ -93,7 +93,7 @@
 
                 &:before {
                     @include pseudo;
-                    width: 1rem; 
+                    width: 1rem;
                     height: 1rem;
                     border-radius: 1rem;
                     background: white;
@@ -263,4 +263,21 @@
         transform: translateX(-50%) translateY(-50%) scale(0.95);
         box-shadow: 0 0 0 0 rgba(black, 0);
     }
+}
+
+[data-page-type='policy'] {
+    .animate-white-to-green {
+        background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.5) 50%, white 50%);
+    }
+    .header-nav:after {
+        opacity: 0.8;
+    }
+
+    .header-logo path {
+        fill: var(--green);
+    }
+}
+.shopify-policy__container {
+    padding-top: 20rem;
+    padding-bottom: 10rem;
 }
