--- a/source/style.scss
+++ b/source/style.scss
@@ -42,3 +42,4 @@ Base includes
 @import 'sections/cursor'; 
 @import 'sections/lightbox'; 
 @import 'sections/products'; 
+@import 'sections/contact'; 
