--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -32,6 +32,24 @@
         }
     }
 
+    &-slider {
+        width: 100%;
+        &-item {
+            @include aspect(1, 1);
+            width: 100%;
+            overflow: hidden;
+
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+
     &-gallery {
         width: 50%;
         padding-right: 4rem;
@@ -40,6 +58,26 @@
         @include media($md, max) {
             width: 100%;
             padding-right: 0;
+        }
+
+        &-sale {
+            position: absolute;
+            top: 2rem;
+            left: 0;
+            padding: 0 2rem 2rem 0;
+            z-index: 3;
+            line-height: 0.7;
+            color: transparent;
+            -webkit-text-fill-color: transparent;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: var(--green);
+            font-size: 4rem;
+            font-weight: bold;
+            transform: rotate(-45deg);
+
+            .char {
+                padding-bottom: 10px;
+            }
         }
 
         &-lightbox {
@@ -107,6 +145,31 @@
         width: 50%;
         padding-left: 4rem;
         padding-top: 6rem;
+        position: relative;
+
+        &-price {
+            position: relative;
+        }
+
+        &-old-price {
+            position: relative;
+            font-size: 70%;
+
+            &:before {
+                @include pseudo;
+                content: 'WHY PAY';
+                font-size: 1rem;
+            }
+
+            &:after {
+                @include pseudo;
+                width: 100%;
+                height: 2px;
+                background: var(--green);
+                top: 55%;
+                transform: rotate(-10deg);
+            }
+        }
 
         @include media($md, max) {
             width: 100%;
@@ -235,7 +298,6 @@ html {
             }
         }
 
-      
         .product-gallery-lightbox {
             path {
                 fill: var(--orange) !important;
@@ -266,9 +328,12 @@ html {
                 fill: var(--orange);
             }
         }
+        .product-details-old-price:after,
         li:before {
             background: var(--orange);
         }
+
+        .product-gallery-sale,
         .collection-grid__marquee__animation span {
             -webkit-text-stroke-color: var(--orange);
         }
@@ -362,10 +427,12 @@ html {
             }
         }
 
+        .product-details-old-price:after,
         li:before {
             background: var(--pink);
         }
 
+        .product-gallery-sale,
         .collection-grid__marquee__animation span {
             -webkit-text-stroke-color: var(--pink);
         }
