--- a/sections/main-collection-banner.liquid
+++ b/sections/main-collection-banner.liquid
@@ -1,15 +1,16 @@
 <div class="banner-collection">
   <div class="banner-collection-image">
-    {%- if section.settings.image != blank -%}
-      {{ section.settings.image | image_url: width: 1640, height: 760 | image_tag }}
+    {%- if collection.image != blank -%}
+      {{ collection.image | image_url: width: 1640, height: 760 | image_tag }}
     {%- endif -%}
   </div>
 
   <div class="banner-collection-text">
     <h1 class="white">
       <b>
-        {{ section.settings.heading }}
+        {{ collection.title }}
       </b>
     </h1>
+    <div class="banner-collection-text-description">{{ collection.description }}</div>
   </div>
 </div>
