--- a/source/sections/banner-collection.scss
+++ b/source/sections/banner-collection.scss
@@ -34,5 +34,12 @@
             top: 65%;
             padding: 6rem 2rem;
         }
+
+        &-description {
+            * {
+                font-size: 1.6rem;
+                color: white;
+            }
+        }
     }
 }
