--- a/sections/main-cart.liquid
+++ b/sections/main-cart.liquid
@@ -111,7 +111,7 @@
       <p>
         <i>SUBTOTAL</i>
       </p>
-      <h3 class="[ js-total ]">{{ cart.total_price | money }}</h3>
+      <h3 class="[ js-cart-total ]">{{ cart.total_price | money }}</h3>
       <p>
         <i>Shipping & taxes calculated at checkout</i>
       </p>
