added in an icon block

--- a/sections/accordion-block.liquid
+++ b/sections/accordion-block.liquid
@@ -1,5 +1,5 @@
 <section class="accordion-element [ element ]">
-  <div class="accordion-element__wrap accordion-element__wrap--{$Width}">
+  <div class="accordion-element__wrap">
     {%- for block in section.blocks -%}
       <div class="accordion-element__item [ js-accordion-element ]" id="accordion_{{ block.settings.id }}">
         <button
