--- a/source/style.scss
+++ b/source/style.scss
@@ -43,3 +43,4 @@ Base includes
 @import 'sections/lightbox'; 
 @import 'sections/products'; 
 @import 'sections/contact'; 
+@import 'sections/icon'; 
