--- a/assets/style.css
+++ b/assets/style.css
@@ -6053,4 +6053,32 @@ iframe.wait-autoplay {
   }
 }
 
+.icon-element {
+  width: 100%;
+  margin: 6rem auto;
+  padding: 0 2rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.icon-element__wrap {
+  max-width: var(--inner-content-width);
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 767px) {
+  .icon-element__wrap {
+    padding: 4rem 2rem;
+  }
+}
+
+.icon-element__intro {
+  width: 100%;
+  margin-bottom: 4rem;
+}
+
+.icon-element__intro__constraint {
+  max-width: 50rem;
+}
+
 /*# sourceMappingURL=style.css.map */
